--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head lang="en">
 	<meta charset="UTF-8">
 	<title>Decollete front Start</title>
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -35,100 +36,5 @@
 	<a href="http://www.decollete.com.ua/">Team Decollete</a>
 
 </footer>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<style>
-
-	* {
-		margin: 0;
-		padding: 0;
-		box-sizing: border-box;
-		-webkit-box-sizing: border-box;
-		-moz-box-sizing: border-box;
-	}
-
-	a {
-		text-decoration: none;
-		color: #f04040;
-		transition: (color .3s);
-	}
-
-	a:hover {
-		color: #e40a0a;
-	}
-
-	body {
-		font-family: Arial, san-serif;
-		font-size: 16px;
-		line-height: 1;
-	}
-
-	main {
-		padding: 300px 0 100px;
-		height: 100%;
-		position: fixed;
-		top: 0;
-		left: 0;
-		width: 100%;
-		overflow-x: hidden;
-		overflow-y: auto;
-		text-align: center;
-	}
-
-	main a {
-		display: inline-block;
-		margin: 0 10px 20px;
-		line-height: 20px;
-		padding: 0 10px;
-		font-size: 13px;
-		border: 1px solid #f04040;
-		border-radius: 2px;
-		transition: (color .3s, border-color .3s);
-	}
-
-	main a:hover {
-		border-color: #e40a0a;
-	}
-
-	main a:active {
-		box-shadow: inset 0 1px 2px rgba(0,0,0,.3);
-	}
-
-	header {
-		text-align: center;
-		padding: 30px 0;
-		position: fixed;
-		top: 0;
-		left: 0;
-		width: 100%;
-		z-index: 1;
-	}
-
-	footer {
-		position: fixed;
-		height: 30px;
-		line-height: 30px;
-		font-size: 13px;
-		text-align: center;
-		bottom: 0;
-		left: 0;
-		width: 100%;
-		z-index: 1;
-	}
-
-</style>
-
 </body>
 </html>
