--- a/index.html
+++ b/index.html
@@ -53,28 +53,28 @@
             </header>
             <div class="services__container">
                 <div class="services__row">
-                    <div class="wrap wrap--flex wrap--left">
-                        <div class="services__block service service--with-icon">
+                    <div class="wrap wrap--flex">
+                        <div class="services__block service service--with-icon js_service__info">
                             <div class="service__icon svg-icon svg-document">
                                 <?xml version="1.0" encoding="utf-8"?>
                                 <!-- Generator: Adobe Illustrator 19.2.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
                                 <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                                  viewBox="0 0 22 22" style="enable-background:new 0 0 22 22;" xml:space="preserve">
-                            <style type="text/css">
-                                .st0{fill:none;stroke:#000000;stroke-width:0.6901;stroke-miterlimit:10;}
-                                .st1{fill:none;stroke:#000000;stroke-width:0.75;stroke-miterlimit:10;}
-                            </style>
-                            <rect x="0.7" y="0.8" class="st0 svg__st" width="20.7" height="18.7"/>
-                            <line class="st1 svg__st" x1="4.5" y1="0.8" x2="4.5" y2="19.5"/>
-                            <line class="st1 svg__st" x1="8.3" y1="0.8" x2="8.3" y2="19.5"/>
-                            <ellipse class="st1 svg__st" cx="2.7" cy="16.7" rx="0.8" ry="0.8"/>
-                            <ellipse class="st1 svg__st" cx="6.4" cy="16.7" rx="0.8" ry="0.8"/>
-                            <line class="st1 svg__st" x1="0.3" y1="21.2" x2="21.7" y2="21.2"/>
-                            <line class="st1 svg__st" x1="10.7" y1="4.7" x2="16.4" y2="4.7"/>
-                            <line class="st1 svg__st" x1="10.7" y1="6.5" x2="19.2" y2="6.5"/>
-                            <line class="st1 svg__st" x1="10.7" y1="8.3" x2="16.4" y2="8.3"/>
-                            <line class="st1 svg__st" x1="10.7" y1="10.2" x2="19.2" y2="10.2"/>
-                            </svg>
+                                <style type="text/css">
+                                    .st0{fill:none;stroke:#a70c5d;stroke-width:0.6901;stroke-miterlimit:10;}
+                                    .st1{fill:none;stroke:#a70c5d;stroke-width:0.75;stroke-miterlimit:10;}
+                                </style>
+                                <rect x="0.7" y="0.8" class="st0 svg__st" width="20.7" height="18.7"/>
+                                <line class="st1 svg__st" x1="4.5" y1="0.8" x2="4.5" y2="19.5"/>
+                                <line class="st1 svg__st" x1="8.3" y1="0.8" x2="8.3" y2="19.5"/>
+                                <ellipse class="st1 svg__st" cx="2.7" cy="16.7" rx="0.8" ry="0.8"/>
+                                <ellipse class="st1 svg__st" cx="6.4" cy="16.7" rx="0.8" ry="0.8"/>
+                                <line class="st1 svg__st" x1="0.3" y1="21.2" x2="21.7" y2="21.2"/>
+                                <line class="st1 svg__st" x1="10.7" y1="4.7" x2="16.4" y2="4.7"/>
+                                <line class="st1 svg__st" x1="10.7" y1="6.5" x2="19.2" y2="6.5"/>
+                                <line class="st1 svg__st" x1="10.7" y1="8.3" x2="16.4" y2="8.3"/>
+                                <line class="st1 svg__st" x1="10.7" y1="10.2" x2="19.2" y2="10.2"/>
+                                </svg>
 
                             </div>
                             <h4 class="service__heading">Наведение порядка<br>
@@ -87,13 +87,23 @@
                                 <li>наличия всех оригиналов договоров, актов,</li>
                                 <li>легализация зависших платежей.</li>
                             </ul>
+                            <div class="service__info">
+                                <p class="h4">Наведение порядка<br>
+                                    в делах</p>
+                                <p>Борьба внутри меня, и я был в самых разных
+                                    ситуациях в моей жизни. <strong>Таким образом, борьба, что
+                                        у меня на постоянной основе, это просто пробовать
+                                        и быть лучше.</strong></p>
+                                <p>Есть определенная разница между публичным человеком и обычным человеком,
+                                это как сойти с ума - для меня во всяком случае - открыть себя целиком для всего мира.</p>
+                            </div>
                         </div>
-                        <div class="services__block service service--with-icon">
+                        <div class="services__block service service--with-icon js_service__info">
                             <div class="service__icon svg-icon svg-target">
                                 <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                                  viewBox="0 0 26 26" style="enable-background:new 0 0 26 26;" xml:space="preserve">
                             <style type="text/css">
-                                .st0{stroke:#000000;stroke-width:0.2;stroke-miterlimit:10;}
+                                .st0{stroke:#a70c5d;stroke-width:0.2;stroke-miterlimit:10;}
                             </style>
                             <g>
                                 <path class="st0 svg__st" d="M11.8,22.2c-4.5,0-8.1-3.6-8.1-8.1S7.4,6,11.8,6S20,9.6,20,14.1S16.3,22.2,11.8,22.2z M11.8,6.7
@@ -122,20 +132,31 @@
                                 </li>
                                 <li>Составление договоров, соглашений о конфиденциальности, публичных офферт</li>
                             </ul>
+                            <div class="service__info">
+                                <p class="h4">Наведение порядка<br>
+                                    в делах</p>
+                                <p>Борьба внутри меня, и я был в самых разных
+                                    ситуациях в моей жизни. <strong>Таким образом, борьба, что
+                                        у меня на постоянной основе, это просто пробовать
+                                        и быть лучше.</strong></p>
+                                <p>Есть определенная разница между публичным человеком и обычным человеком,
+                                    это как сойти с ума - для меня во всяком случае - открыть себя целиком для всего мира.</p>
+                            </div>
                         </div>
                     </div>
                 </div>
                 <div class="services__row">
-                    <div class="wrap wrap--flex wrap--left">
-                        <div class="services__block service service--with-icon">
+                    <div class="wrap wrap--flex">
+                        <div class="services__block service service--with-icon js_service__info">
                             <div class="service__icon svg-icon svg-notepad">
                                 <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                                      viewBox="0 0 24 23" style="enable-background:new 0 0 24 23;" xml:space="preserve">
                                 <style type="text/css">
-                                    .st0{fill:none;stroke:#000000;stroke-width:0.75;stroke-miterlimit:10;}
-                                    .st1{fill:none;stroke:#000000;stroke-width:0.5;stroke-miterlimit:10;}
-                                    .st2{fill:none;stroke:#000000;stroke-width:0.75;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:10;}
-                                    .st3{stroke:#000000;stroke-width:0.2758;stroke-miterlimit:10;}
+                                    .st0{fill:none;stroke:#a70c5d;stroke-width:0.75;stroke-miterlimit:10;}
+                                    .st1{fill:none;stroke:#a70c5d;stroke-width:0.5;stroke-miterlimit:10;}
+                                    .st2{fill:none;stroke:#a70c5d;stroke-width:0.75;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:10;}
+                                    .st3{stroke:#a70c5d;stroke-width:0.2758;stroke-miterlimit:10;}
+                                    .fl0{fill: #a70c5d;}
                                 </style>
                                 <g>
                                     <polygon class="st0 svg__st" points="3.7,18 2.2,21.5 0.7,18 0.7,2.4 3.7,2.4 	"/>
@@ -159,7 +180,7 @@
                                         <line class="st1 svg__st" x1="6.5" y1="3.7" x2="8.2" y2="3.7"/>
                                         <line class="st1 svg__st" x1="16.4" y1="3.7" x2="18.1" y2="3.7"/>
                                     </g>
-                                    <polygon class="st3 svg__fl" points="2.8,20.2 2.2,21.6 1.6,20.2"/>
+                                    <polygon class="st3 svg__st" points="2.8,20.2 2.2,21.6 1.6,20.2"/>
                                 </g>
                                 </svg>
                             </div>
@@ -170,15 +191,25 @@
                                 <li>Дайджест предпринимательских ИТ-новостей с разъяснениями</li>
                                 <li>Представительство интересов в судах</li>
                             </ul>
+                            <div class="service__info">
+                                <p class="h4">Наведение порядка<br>
+                                    в делах</p>
+                                <p>Борьба внутри меня, и я был в самых разных
+                                    ситуациях в моей жизни. <strong>Таким образом, борьба, что
+                                        у меня на постоянной основе, это просто пробовать
+                                        и быть лучше.</strong></p>
+                                <p>Есть определенная разница между публичным человеком и обычным человеком,
+                                    это как сойти с ума - для меня во всяком случае - открыть себя целиком для всего мира.</p>
+                            </div>
                         </div>
-                        <div class="services__block service service--with-icon">
+                        <div class="services__block service service--with-icon js_service__info">
                         <div class="service__icon svg-icon svg-court">
                             <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                                  viewBox="0 0 25 25" style="enable-background:new 0 0 25 25;" xml:space="preserve">
                             <style type="text/css">
-                                .st0{fill:#FFFFFF;stroke:#000000;stroke-width:0.75;stroke-miterlimit:10;}
-                                .st1{fill:none;stroke:#000000;stroke-width:0.5;stroke-miterlimit:10;}
-                                .st2{fill:none;stroke:#000000;stroke-width:0.75;stroke-miterlimit:10;}
+                                .st0{fill:#FFFFFF;stroke:#a70c5d;stroke-width:0.75;stroke-miterlimit:10;}
+                                .st1{fill:none;stroke:#a70c5d;stroke-width:0.5;stroke-miterlimit:10;}
+                                .st2{fill:none;stroke:#a70c5d;stroke-width:0.75;stroke-miterlimit:10;}
                             </style>
                             <g>
                                 <g>
@@ -223,6 +254,16 @@
                         <h4 class="service__heading">Разработка договоров<br>
                             и другой документации</h4>
                         <span class="service__text">К сожалению, конфликты бывают в любой сфере. Если дело близится к суду или уже дошло до него, мы поможем отстоять ваши права и интересы.</span>
+                            <div class="service__info">
+                                <p class="h4">Наведение порядка<br>
+                                    в делах</p>
+                                <p>Борьба внутри меня, и я был в самых разных
+                                    ситуациях в моей жизни. <strong>Таким образом, борьба, что
+                                        у меня на постоянной основе, это просто пробовать
+                                        и быть лучше.</strong></p>
+                                <p>Есть определенная разница между публичным человеком и обычным человеком,
+                                    это как сойти с ума - для меня во всяком случае - открыть себя целиком для всего мира.</p>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -236,13 +277,89 @@
                 <h3 class="heading heading--underline heading--center">Отзывы</h3>
                 <p>Мнение наших клиентов <strong>делает мир и нас лучше :)</strong></p>
             </header>
+            <div class="testimonials__container">
+                <div class="wrap wrap--flex">
+                    <div class="testimonials__block testimonials__block_text">
+                        <p>Главная тема для меня – любовь.
+                            Мы все хотим ее, но не знаем как получить, поэтому все,
+                            что мы делаем, — это всего лишь попытки найти счастье.</p>
+                        <div class="testimonials__author-image">
+                            <img src="/assets/img/testimonials-photo1.jpg" alt="author photo">
+                        </div>
+                        <div class="testimonials__meta">
+                            <p class="testimonials__author-name">Алексей Фёдоров</p>
+                            <p class="testimonials__author-info">CEO <a href="#" target="_blank" rel="nofollow">deco.agency</a></p>
+                        </div>
+                    </div>
+                    <div class="testimonials__block testimonials__block_text">
+                        <p>Главная тема для меня – любовь.
+                            Мы все хотим ее, но не знаем как получить, поэтому все,
+                            что мы делаем, — это всего лишь попытки найти счастье.</p>
+                        <div class="testimonials__author-image">
+                            <img src="/assets/img/testimonials-photo2.jpg" alt="author photo">
+                        </div>
+                        <div class="testimonials__meta">
+                            <p class="testimonials__author-name">Артур Оруджалиев</p>
+                            <p class="testimonials__author-info">CEO <a href="#" target="_blank" rel="nofollow">AIN.ua</a></p>
+                        </div>
+                    </div>
+                    <div class="testimonials__block testimonials__block_video">
+                        <div class="testimonials__video">
+                            <img src="/assets/img/testimonials-video1.jpg" alt="video screen">
+                        </div>
+                        <div class="testimonials__meta">
+                            <p class="testimonials__author-name">Григорий Маленко</p>
+                            <p class="testimonials__author-info">CEO <a href="#" target="_blank" rel="nofollow">SERM.ua</a></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="text-center"><button class="btn-text btn__reload">загрузить еще</button></div>
         </article>
+    </section>
+
+    <section id="contacts" class="section section--contacts contacts">
+        <article>
+            <header class="section__header text-center">
+                <h3 class="heading heading--underline heading--center">запрос на услуги</h3>
+            </header>
+        </article>
+        <div class="contacts__container">
+            <div class="wrap">
+                <form method="POST" name="contact-form">
+                    <input type="text" name="name" class="inp inp--required" placeholder="Имя*" autocomplete="off">
+                    <input type="tel" name="tel" class="inp inp--required" placeholder="Телефон*" autocomplete="off">
+                    <input type="email" name="email" class="inp inp--required" placeholder="E-mail*">
+                    <input type="text" name="site" class="inp" placeholder="Site">
+                    <div class="selectric--form">
+                        <select class="js_select">
+                            <option value="change">Наведение порядка в делах</option>
+                            <option value="assistance">Правовое сопровождение деятельности</option>
+                            <option value="optimize">Оптимизация договорных отношений</option>
+                            <option value="create">Разработка договоров</option>
+                        </select>
+                    </div>
+
+                    <div class="form__textarea">
+                        <p>Дополнительная информация</p>
+                        <textarea class="textarea" name="message" placeholder=" Введите текст ..." style="overflow: hidden; word-wrap: break-word; height: 100px;"></textarea>
+                    </div>
+                    <button class="btn" type="submit">Отправить</button>
+                </form>
+            </div>
+        </div>
     </section>
 </main>
 
 
 <footer id="footer" class="footer">
-
+    <div class="text-center">
+        pravo agency:
+        01001, Киев, ул.Костёльная 9, оф.8
+        +380 (67) 324 10 10
+        hello@pravo.agency
+        <p class="copyright">© 2015, Pravo agency</p>
+    </div>
 </footer>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="assets/js/libs/jquery-1.11.2.min.js"><\/script>')</script>
