add grid styles, fix global styles, update sections wrap

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                             <div class="service__icon svg-icon svg-document">
                                 <?xml version="1.0" encoding="utf-8"?>
                                 <!-- Generator: Adobe Illustrator 19.2.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
-                                <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                                <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                                  viewBox="0 0 22 22" style="enable-background:new 0 0 22 22;" xml:space="preserve">
                                 <style type="text/css">
                                     .st0{fill:none;stroke:#a70c5d;stroke-width:0.6901;stroke-miterlimit:10;}
@@ -100,7 +100,7 @@
                         </div>
                         <div class="services__block service service--with-icon js_service__info">
                             <div class="service__icon svg-icon svg-target">
-                                <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                                <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                                  viewBox="0 0 26 26" style="enable-background:new 0 0 26 26;" xml:space="preserve">
                             <style type="text/css">
                                 .st0{stroke:#a70c5d;stroke-width:0.2;stroke-miterlimit:10;}
@@ -149,7 +149,7 @@
                     <div class="wrap wrap--flex">
                         <div class="services__block service service--with-icon js_service__info">
                             <div class="service__icon svg-icon svg-notepad">
-                                <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                                <svg version="1.1"xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                                      viewBox="0 0 24 23" style="enable-background:new 0 0 24 23;" xml:space="preserve">
                                 <style type="text/css">
                                     .st0{fill:none;stroke:#a70c5d;stroke-width:0.75;stroke-miterlimit:10;}
@@ -204,7 +204,7 @@
                         </div>
                         <div class="services__block service service--with-icon js_service__info">
                         <div class="service__icon svg-icon svg-court">
-                            <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                            <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                                  viewBox="0 0 25 25" style="enable-background:new 0 0 25 25;" xml:space="preserve">
                             <style type="text/css">
                                 .st0{fill:#FFFFFF;stroke:#a70c5d;stroke-width:0.75;stroke-miterlimit:10;}
@@ -278,8 +278,8 @@
                 <p>Мнение наших клиентов <strong>делает мир и нас лучше :)</strong></p>
             </header>
             <div class="testimonials__container">
-                <div class="wrap wrap--flex">
-                    <div class="testimonials__block testimonials__block_text">
+                <div class="wrap wrap--grid">
+                    <div class="testimonials__block testimonials__block_text col-1-3">
                         <p>Главная тема для меня – любовь.
                             Мы все хотим ее, но не знаем как получить, поэтому все,
                             что мы делаем, — это всего лишь попытки найти счастье.</p>
@@ -291,7 +291,7 @@
                             <p class="testimonials__author-info">CEO <a href="#" target="_blank" rel="nofollow">deco.agency</a></p>
                         </div>
                     </div>
-                    <div class="testimonials__block testimonials__block_text">
+                    <div class="testimonials__block testimonials__block_text col-1-3">
                         <p>Главная тема для меня – любовь.
                             Мы все хотим ее, но не знаем как получить, поэтому все,
                             что мы делаем, — это всего лишь попытки найти счастье.</p>
@@ -303,7 +303,7 @@
                             <p class="testimonials__author-info">CEO <a href="#" target="_blank" rel="nofollow">AIN.ua</a></p>
                         </div>
                     </div>
-                    <div class="testimonials__block testimonials__block_video">
+                    <div class="testimonials__block testimonials__block_video col-1-3">
                         <div class="testimonials__video">
                             <img src="/assets/img/testimonials-video1.jpg" alt="video screen">
                         </div>
@@ -314,7 +314,33 @@
                     </div>
                 </div>
             </div>
-            <div class="text-center"><button class="btn-text btn__reload">загрузить еще</button></div>
+            <div class="text-center testimonials__loadmore js_loadmore"><button class="btn--text btn--loadmore btn--icon"><?xml version="1.0" encoding="utf-8"?>
+                <svg class="loadmore__icon" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                         viewBox="0 0 41 41" style="enable-background:new 0 0 41 41;" xml:space="preserve">
+                    <g>
+                        <path class="st0" d="M9,30.3c3.7,4.5,9.4,6.3,14.7,5.3"/>
+                        <g>
+                            <g>
+                                <path class="st1" d="M6,15.7c-1.5,4.7-0.7,10,2.7,14.2"/>
+                                <g>
+                                    <polygon class="st2" points="0.3,14.3 10.8,8.6 10.5,20.6 				"/>
+                                </g>
+                            </g>
+                        </g>
+                    </g>
+                    <g>
+                        <path class="st0" d="M32,10.7c-3.7-4.5-9.4-6.3-14.7-5.3"/>
+                        <g>
+                            <g>
+                                <path class="st1" d="M35,25.3c1.5-4.7,0.7-10-2.7-14.2"/>
+                                <g>
+                                    <polygon class="st2" points="40.7,26.7 30.2,32.4 30.5,20.4 				"/>
+                                </g>
+                            </g>
+                        </g>
+                    </g>
+                    </svg>
+                загрузить еще</button></div>
         </article>
     </section>
 
@@ -325,26 +351,46 @@
             </header>
         </article>
         <div class="contacts__container">
-            <div class="wrap">
+            <div class="wrap wrap--form">
                 <form method="POST" name="contact-form">
-                    <input type="text" name="name" class="inp inp--required" placeholder="Имя*" autocomplete="off">
-                    <input type="tel" name="tel" class="inp inp--required" placeholder="Телефон*" autocomplete="off">
-                    <input type="email" name="email" class="inp inp--required" placeholder="E-mail*">
-                    <input type="text" name="site" class="inp" placeholder="Site">
-                    <div class="selectric--form">
-                        <select class="js_select">
-                            <option value="change">Наведение порядка в делах</option>
-                            <option value="assistance">Правовое сопровождение деятельности</option>
-                            <option value="optimize">Оптимизация договорных отношений</option>
-                            <option value="create">Разработка договоров</option>
-                        </select>
+                    <div class="col-1-2">
+                        <div class="input__group">
+                            <input type="text" name="name" class="inp inp--required" placeholder="Имя*" autocomplete="off">
+                            <span class="input__underline"></span>
+                        </div>
+                        <div class="input__group">
+                            <input type="tel" name="tel" class="inp inp--required" placeholder="Телефон*" autocomplete="off">
+                            <span class="input__underline"></span>
+                        </div>
+                        <div class="input__group">
+                            <input type="email" name="email" class="inp inp--required" placeholder="E-mail*">
+                            <span class="input__underline"></span>
+                        </div>
+                        <div class="input__group">
+                            <input type="text" name="site" class="inp" placeholder="Site">
+                            <span class="input__underline"></span>
+                        </div>
+                        <div class="selectric--form">
+                            <select class="js_select">
+                                <option value="none">МЕНЯ ИНТЕРЕСУЕТ</option>
+                                <option value="change">Наведение порядка в делах</option>
+                                <option value="assistance">Правовое сопровождение деятельности</option>
+                                <option value="optimize">Оптимизация договорных отношений</option>
+                                <option value="create">Разработка договоров</option>
+                            </select>
+                        </div>
                     </div>
 
-                    <div class="form__textarea">
-                        <p>Дополнительная информация</p>
-                        <textarea class="textarea" name="message" placeholder=" Введите текст ..." style="overflow: hidden; word-wrap: break-word; height: 100px;"></textarea>
+                    <div class="col-1-2">
+                        <div class="form__textarea">
+                            <p>Дополнительная информация</p>
+                            <textarea class="textarea" name="message" placeholder=" Введите текст ..." style="overflow: hidden; word-wrap: break-word; height: 100px;"></textarea>
+                        </div>
                     </div>
-                    <button class="btn" type="submit">Отправить</button>
+
+                    <div class="text-center">
+                        <button class="btn" type="submit">Отправить</button>
+                    </div>
                 </form>
             </div>
         </div>
