--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <header id="header" class="header">
     <div class="wrap wrap--left">
-        <a class="header__logo" href="/"><img src="assets/img/svg/logo.svg" alt="pravo agency logo" scale="0"/></a>
+        <a href="/" class="header__logo"><img src="assets/img/svg/logo.svg" alt="pravo agency logo" scale="0"/></a>
 
         <nav class="header__nav">
             <ul class="header__menu">
@@ -39,7 +39,7 @@
                     дизайнеры, стартаперы и другие IT-специалисты не
                     уделяют должного внимания правовым аспектам своей деятельности.</p>
                 <p>Но <strong>документы должны быть в порядке</strong>, и мы в этом поможем.</p>
-                <a class="btn btn--icon" href="#services">Услуги и цены</a>
+                <a href="#services" class="btn btn--icon">Услуги и цены</a>
             </div>
         </div>
     </section>
@@ -408,11 +408,30 @@
 
 <footer id="footer" class="footer">
     <div class="text-center">
-        pravo agency:
-        01001, Киев, ул.Костёльная 9, оф.8
-        +380 (67) 324 10 10
-        hello@pravo.agency
-        <p class="copyright">© 2015, Pravo agency</p>
+        <p class="footer__site-name">pravo agency:</p>
+        <div class="footer__contacts">
+            <span>01001, Киев, ул.Костёльная 9, оф.8</span>
+            <span>+380 (67) 324 10 10</span>
+            <a href="mailto:hello@pravo.agency">hello@pravo.agency</a>
+        </div>
+        <div class="footer__social social">
+            <a href="#" target="_blank" class="social__link social__link_fb">
+                <div class="self-center">
+                    <i class="social__icon social__icon_fb"></i>
+                </div>
+            </a>
+            <a href="#" target="_blank" class="social__link social__link_tw">
+                <div class="self-center">
+                    <i class="social__icon social__icon_tw"></i>
+                </div>
+            </a>
+            <a href="#" target="_blank" class="social__link social__link_in">
+                <div class="self-center">
+                    <i class="social__icon social__icon_in"></i>
+                </div>
+            </a>
+        </div>
+        <p class="footer__copyright">© 2015, <b>Pravo agency</b></p>
     </div>
 </footer>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
