--- a/dev/index.html
+++ b/dev/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head lang="en">
+<head lang="ru">
     <meta charset="UTF-8">
     <title>Decollete front Start</title>
     <link rel="stylesheet" href="style.css">
