--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head lang="en">
+<head lang="ru">
     <meta charset="UTF-8">
     <title>Decollete front Start</title>
     <link rel="stylesheet" href="style.css">
@@ -44,13 +44,13 @@
                     уделяют должного внимания правовым аспектам своей деятельности.</p>
                 <p>Но <strong>документы должны быть в порядке</strong>, и мы в этом поможем.</p>
                 <a href="#services" class="btn btn--icon">
-                    <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                    <svg class="svg--arrow-down btn__svg" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                          viewBox="0 0 38 38" style="enable-background:new 0 0 38 38;" xml:space="preserve">
                         <g>
-                            <line fill="none" stroke="#fff" stroke-width="3" x1="18.9" y1="13.3" x2="18.9" y2="23.5"/>
-                            <polyline fill="none" stroke="#fff" stroke-width="3" points="22.9,20.1 18.9,24.2 14.7,20 	"/>
+                            <line x1="18.9" y1="13.3" x2="18.9" y2="23.5"/>
+                            <polyline points="22.9,20.1 18.9,24.2 14.7,20 	"/>
                         </g>
-                        <circle fill="none" stroke="#fff" stroke-width="3" class="ad__st1" cx="18.9" cy="19" r="17.1"/>
+                        <circle class="ad__st1" cx="18.9" cy="19" r="17.1"/>
                     </svg>
                     Услуги и цены</a>
             </div>
@@ -304,7 +304,7 @@
                 </div>
             </div>
             <div class="text-center testimonials__loadmore js_loadmore"><button class="btn--text btn--loadmore btn--icon"><?xml version="1.0" encoding="utf-8"?>
-                <svg class="loadmore__icon" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                <svg class="svg--loadmore" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                              viewBox="0 0 41 41" style="enable-background:new 0 0 41 41;" xml:space="preserve">
                         <g>
                             <path class="st0" d="M9,30.3c3.7,4.5,9.4,6.3,14.7,5.3"/>
