--- a/dev/index.html
+++ b/dev/index.html
@@ -3,6 +3,8 @@
 <head lang="ru">
     <meta charset="UTF-8">
     <title>Decollete front Start</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
 </head>
 <body class="home">
