--- a/index.html
+++ b/index.html
@@ -13,23 +13,43 @@
     <div class="wrap wrap--left">
         <a href="/" class="header__logo"><img src="assets/img/svg/logo.svg" alt="pravo agency logo" scale="0"/></a>
 
-        <nav class="header__nav">
-            <ul class="header__menu">
-                <li><a href="#services">Услуги и цены</a></li>
-                <li><a href="#testimonials">Отзывы</a></li>
-                <li><a href="#contacts">Контакты</a></li>
-            </ul>
-
-            <div class="lang header__lang selectric--lang">
-                <a href="#" class="lang__link lang__item--current">ru</a>
-                <ul class="lang__list">
-                    <li class="lang__item"><a href="#" class="lang__link">en</a></li>
-                    <li class="lang__item"><a href="#" class="lang__link">ua</a></li>
+        <div class="header__block">
+            <nav class="header__nav">
+                <ul class="header__menu">
+                    <li><a href="#services">Услуги и цены</a></li>
+                    <li><a href="#testimonials">Отзывы</a></li>
+                    <li><a href="#contacts">Контакты</a></li>
                 </ul>
-            </div>
-        </nav>
+
+                <div class="lang header__lang selectric--lang">
+                    <a href="#" class="lang__link lang__item--current">ru</a>
+                    <ul class="lang__list">
+                        <li class="lang__item"><a href="#" class="lang__link">en</a></li>
+                        <li class="lang__item"><a href="#" class="lang__link">ua</a></li>
+                    </ul>
+                </div>
+            </nav>
+
+            <button class="burger header__burger">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
+        </div>
+
     </div>
 </header>
+<div class="mobile-nav">
+    <nav>
+        <ul class="mobile-nav__menu">
+        </ul>
+    </nav>
+    <button class="burger mobile-nav__burger">
+        <span></span>
+        <span></span>
+        <span></span>
+    </button>
+</div>
 
 <main id="main" role="main">
 
