--- a/dev/index.html
+++ b/dev/index.html
@@ -22,6 +22,7 @@
 </main>
 
 //= partials/footer.html
+//= partials/modal.html
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="assets/js/libs/jquery-1.11.2.min.js"><\/script>')</script>
