--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     Услуги и цены</a>
             </div>
             <div class="welcome__play">
-                <button class="modal__link btn--play" data-url="https://www.youtube.com/watch?v=aQn5wiDyUHo?autoplay=1&cc_load_policy=1">
+                <button class="modal__link btn--play" data-url="//www.youtube.com/watch?v=aQn5wiDyUHo?autoplay=1&cc_load_policy=1">
                     <svg class="svg--play" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                          viewBox="0 0 23.8 29.3" style="enable-background:new 0 0 23.8 29.3;" xml:space="preserve">
                         <polygon class="st0" points="21.5,14.8 3.1,27.2 3.1,2.4 "/>
@@ -333,7 +333,7 @@
                     </div>
                     <div class="testimonials__block testimonials__block_video col-1-3">
                         <div class="testimonials__video">
-                            <span class="modal__link" data-url="https://www.youtube.com/watch?v=aQn5wiDyUHo?autoplay=1&cc_load_policy=1">
+                            <span class="modal__link" data-url="//www.youtube.com/watch?v=aQn5wiDyUHo?autoplay=1&cc_load_policy=1">
                                 <img src="assets/img/testimonials-video1.jpg" alt="video screen" >
                             </span>
                         </div>
