add roles and change some div to more semantic tags

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <a href="/" class="header__logo"><img src="assets/img/svg/logo.svg" alt="pravo agency logo" scale="0"/></a>
 
         <div class="header__block">
-            <nav class="header__nav">
+            <nav class="header__nav" role="navigation">
                 <ul class="header__menu">
                     <li><a href="#services">Услуги и цены</a></li>
                     <li><a href="#testimonials">Отзывы</a></li>
@@ -463,41 +463,41 @@
             </header>
             <div class="testimonials__container">
                 <div class="wrap wrap--grid">
-                    <div class="testimonials__block testimonials__block_text col-1-3">
+                    <blockquote class="testimonials__block testimonials__block_text col-1-3">
                         <p>Главная тема для меня – любовь.
                             Мы все хотим ее, но не знаем как получить, поэтому все,
                             что мы делаем, — это всего лишь попытки найти счастье.</p>
                         <div class="testimonials__author-image">
                             <img src="assets/img/testimonials-photo1.jpg" alt="author photo">
                         </div>
-                        <div class="testimonials__meta">
+                        <footer class="testimonials__meta">
                             <p class="testimonials__author-name">Алексей Фёдоров</p>
                             <p class="testimonials__author-info">CEO <a href="#" target="_blank" rel="nofollow">deco.agency</a></p>
-                        </div>
-                    </div>
-                    <div class="testimonials__block testimonials__block_text col-1-3">
+                        </footer>
+                    </blockquote>
+                    <blockquote class="testimonials__block testimonials__block_text col-1-3">
                         <p>Главная тема для меня – любовь.
                             Мы все хотим ее, но не знаем как получить, поэтому все,
                             что мы делаем, — это всего лишь попытки найти счастье.</p>
                         <div class="testimonials__author-image">
                             <img src="assets/img/testimonials-photo2.jpg" alt="author photo">
                         </div>
-                        <div class="testimonials__meta">
+                        <footer class="testimonials__meta">
                             <p class="testimonials__author-name">Артур Оруджалиев</p>
                             <p class="testimonials__author-info">CEO <a href="#" target="_blank" rel="nofollow">AIN.ua</a></p>
-                        </div>
-                    </div>
-                    <div class="testimonials__block testimonials__block_video col-1-3">
+                        </footer>
+                </blockquote>
+                    <blockquote class="testimonials__block testimonials__block_video col-1-3">
                         <div class="testimonials__video">
                             <span class="modal__link" data-url="//www.youtube.com/watch?v=aQn5wiDyUHo?autoplay=1&cc_load_policy=1">
                                 <img src="assets/img/testimonials-video1.jpg" alt="video screen" >
                             </span>
                         </div>
-                        <div class="testimonials__meta">
+                        <footer class="testimonials__meta">
                             <p class="testimonials__author-name">Григорий Маленко</p>
                             <p class="testimonials__author-info">CEO <a href="#" target="_blank" rel="nofollow">SERM.ua</a></p>
-                        </div>
-                    </div>
+                        </footer>
+                    </blockquote>
                 </div>
             </div>
             <div class="text-center testimonials__loadmore js_loadmore"><button class="btn--text btn--loadmore btn--icon"><?xml version="1.0" encoding="utf-8"?>
@@ -616,7 +616,7 @@
                 </div>
             </a>
         </div>
-        <p class="footer__copyright">© 2015, <b>Pravo agency</b></p>
+        <p class="footer__copyright" role="contentinfo">© 2015, <b>Pravo agency</b></p>
     </div>
 </footer>
 <div class="modal modal__video">
