--- a/index.html
+++ b/index.html
@@ -77,12 +77,12 @@
                     Услуги и цены</a>
             </div>
             <div class="welcome__play">
-                <button class="modal__link btn--play" data-url="//www.youtube.com/watch?v=aQn5wiDyUHo?autoplay=1&cc_load_policy=1">
-                    <svg class="svg--play" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-                         viewBox="0 0 23.8 29.3" style="enable-background:new 0 0 23.8 29.3;" xml:space="preserve">
-                        <polygon class="st0" points="21.5,14.8 3.1,27.2 3.1,2.4 "/>
-                    </svg>
-                    <span>Смотреть видео</span>
+                <button class="modal__link btn--in-circle btn--inline-mobile" data-url="//www.youtube.com/watch?v=aQn5wiDyUHo?autoplay=1&cc_load_policy=1">
+                        <svg class="btn__svg svg--play" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                             viewBox="0 0 23.8 29.3" style="enable-background:new 0 0 23.8 29.3;" xml:space="preserve">
+                            <polygon class="st0" points="21.5,14.8 3.1,27.2 3.1,2.4 "/>
+                        </svg>
+                    <span class="btn__text-mobile">Смотреть видео</span>
                 </button>
             </div>
         </div>
@@ -468,7 +468,7 @@
                             Мы все хотим ее, но не знаем как получить, поэтому все,
                             что мы делаем, — это всего лишь попытки найти счастье.</p>
                         <div class="testimonials__author-image">
-                            <img src="assets/img/testimonials-photo1.jpg" alt="author photo">
+                            <img class="img--responsive" src="assets/img/testimonials-photo1.jpg" alt="author photo">
                         </div>
                         <footer class="testimonials__meta">
                             <p class="testimonials__author-name">Алексей Фёдоров</p>
@@ -480,7 +480,7 @@
                             Мы все хотим ее, но не знаем как получить, поэтому все,
                             что мы делаем, — это всего лишь попытки найти счастье.</p>
                         <div class="testimonials__author-image">
-                            <img src="assets/img/testimonials-photo2.jpg" alt="author photo">
+                            <img class="img--responsive" src="assets/img/testimonials-photo2.jpg" alt="author photo">
                         </div>
                         <footer class="testimonials__meta">
                             <p class="testimonials__author-name">Артур Оруджалиев</p>
@@ -490,7 +490,7 @@
                     <blockquote class="testimonials__block testimonials__block_video col-1-3">
                         <div class="testimonials__video">
                             <span class="modal__link" data-url="//www.youtube.com/watch?v=aQn5wiDyUHo?autoplay=1&cc_load_policy=1">
-                                <img src="assets/img/testimonials-video1.jpg" alt="video screen" >
+                                <img class="img--responsive" src="assets/img/testimonials-video1.jpg" alt="video screen" >
                             </span>
                         </div>
                         <footer class="testimonials__meta">
