--- a/dev/index.html
+++ b/dev/index.html
@@ -5,6 +5,7 @@
     <title>Decollete front Start</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" href="favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="style.css">
 </head>
 <body class="home">
