--- a/dev/index.html
+++ b/dev/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html>
-<head lang="ru">
+<html lang="ru">
+<head>
     <meta charset="UTF-8">
     <title>Decollete front Start</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
